# KinectReader

./: CMakeLists.txt  kinectreader.cpp  readKinect.cpp  test.cpp
